--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -375,7 +375,7 @@ nav {
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
-    background-position: center;
+    /* background-position: center; */
 }
 
 blockquote {
