--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -285,7 +285,7 @@ nav {
 .meal-photo img {
     opacity: 0.6;
     width: 100%;
-    transform: scale(1.2);
+    transform: scale(1.25);
     transition: transform 0.7s, opacity 0.7s;
 }
 
@@ -375,7 +375,7 @@ nav {
     background-size: cover;
     color: #fff;
     background-attachment: fixed;
-    /* background-position: center; */
+    background-position: center;
 }
 
 blockquote {
