--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -89,6 +89,10 @@
     .meal-photo img:hover {
         transform: scale(1.05);
     }
+
+    .meal-photo img {
+        transition: transform 0.6s, opacity 0.7s;
+    }
 }
 
 /* Small phones to small tablets: from 481px to 767px */
@@ -157,6 +161,10 @@
     .meal-photo img:hover {
         transform: scale(1.06);
     }
+
+    .meal-photo img {
+        transition: transform 0.6s, opacity 0.6s;
+    }
 }
 
 /* Small phones: from 0 to 480px */
@@ -203,6 +211,10 @@
     }
 
     .meal-photo img:hover {
-        transform: scale(1.1);
+        transform: scale(1.15);
+    }
+
+    .meal-photo img {
+        transition: transform 0.5s, opacity 0.5s;
     }
 }
