--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -25,6 +25,14 @@
     .meal-photo img:hover {
         transform: scale(1.04);
     }
+
+    .works-step {
+        margin-bottom: 40px;
+    }
+
+    .works-step:last-of-type {
+        margin-bottom: 70px;
+    }
 }
 
 /* Small tablet to big tablet: from 768px to 1023px */
@@ -53,7 +61,7 @@
     }
 
     .works-step {
-        margin-bottom: 40px;
+        margin-bottom: 36px;
     }
 
     .works-step:last-of-type {
@@ -121,6 +129,45 @@
         display: none;
     }
 
+    .mobile-nav-icon {
+        display: inline-block;
+    }
+
+    .main-nav {
+        float: left;
+        margin-top: 35px;
+        margin-left: 35px;
+    }
+
+    .main-nav li {
+        display: block;
+    }
+
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 10px 0;
+        font-size: 100%;
+    }
+
+    .sticky .main-nav {
+        margin-top: 10px;
+    }
+
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited {
+        padding: 10px 0;
+    }
+
+    .sticky .mobile-nav-icon {
+        margin-top: 10px;
+    }
+
+    .sticky .mobile-nav-icon ion-icon {
+        color: #555;
+    }
+
     .long-copy {
         width: 100%;
         margin-left: 0;
@@ -184,7 +231,12 @@
     }
 
     .logo {
-        height: 80px;
+        height: 70px;
+    }
+
+    .mobile-nav-icon {
+        font-size: 110%;
+        margin-top: 25px;
     }
 
     .btn-app img {
