--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,682 +1,1 @@
-/* --------------------------------------------------- */
-/* BASIC STUFF */
-/* --------------------------------------------------- */
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html,
-body {
-    background-color: #fff;
-    color: #555;
-    font-family: 'Lato', 'Arial', sans-serif;
-    font-size: 20px;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-    overflow-x: hidden;
-}
-
-.clearfix {
-    zoom: 1;
-}
-
-.clearfix::after {
-    content: '.';
-    clear: both;
-    display: block;
-    height: 0;
-    visibility: hidden;
-}
-
-/* --------------------------------------------------- */
-/* REUSABLE COMPONENTS */
-/* --------------------------------------------------- */
-
-.row {
-    max-width: 1140px;
-    margin: 0 auto;
-}
-
-section {
-    padding: 80px 0;
-}
-
-.box {
-    padding: 1.3%;
-}
-
-/* --------- HEADINGS ---------- */
-
-h1,
-h2,
-h3 {
-    font-weight: 300;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    line-height: 1.2;
-}
-
-h1 {
-    margin: 0 0 20px 0;
-    color: #fff;
-    font-size: 200%;
-    word-spacing: 4px;
-}
-
-h2 {
-    font-size: 180%;
-    word-spacing: 2px;
-    text-align: center;
-    margin-bottom: 30px;
-}
-
-h3 {
-    font-size: 110%;
-    margin-bottom: 15px;
-}
-
-h2::after {
-    display: block;
-    height: 2px;
-    background-color: #e67e22;
-    content: ' ';
-    width: 100px;
-    margin: 20px auto 0;
-}
-
-/* ----------- PARAGRAPHS ---------- */
-
-.long-copy {
-    line-height: 1.45;
-    width: 70%;
-    margin: 0 15%;
-}
-
-.box p {
-    letter-spacing: 1px;
-    font-size: 80%;
-    line-height: 1.45;
-}
-
-/* ------------ ICONS ------------ */
-
-.icon-big {
-    font-size: 350%;
-    display: block;
-    color: #e67e22;
-    margin-bottom: 15px;
-}
-
-.icon-small {
-    display: inline-block;
-    width: 30px;
-    text-align: center;
-    color: #e67e22;
-    font-size: 120%;
-    margin-right: 10px;
-
-    /* Secrets to align text and icons */
-    line-height: 1.2;
-    vertical-align: middle;
-    margin-top: -5px;
-}
-
-/* ------------- LINKS ------------ */
-
-a:link,
-a:visited {
-    color: #e67e22;
-    text-decoration: none;
-    padding-bottom: 1px;
-    border-bottom: 1px solid #e67e22;
-    transition: border-bottom 0.2s, color 0.2s;
-}
-
-a:hover,
-a:active {
-    color: #555;
-    border-bottom: 1px solid transparent;
-}
-
-/* ------------- BUTTONS ----------- */
-
-.btn:link,
-.btn:visited,
-input[type=submit] {
-    display: inline-block;
-    padding: 10px 30px;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 200px;
-    transition: background-color 0.2s, border 0.2s, color 0.2s;
-}
-
-.btn-full:link,
-.btn-full:visited,
-input[type=submit] {
-    background-color: #e67e22;
-    color: #fff;
-    border: 1px solid #e67e22;
-    margin-right: 15px;
-}
-
-.btn-ghost:link,
-.btn-ghost:visited {
-    border: 1px solid #e67e22;
-    color: #e67e22;
-}
-
-.btn:hover,
-.btn:active,
-input[type=submit]:hover,
-input[type=submit]:active {
-    background-color: #cf6d17;
-}
-
-.btn-full:hover,
-.btn-full:active,
-input[type=submit] {
-    border: 1px solid #cf6d17;
-}
-
-.btn-ghost:hover,
-.btn-ghost:active {
-    border: 1px solid #cf6d17;
-    color: #fff;
-}
-
-/* --------------------------------------------------- */
-/* HEADER */
-/* --------------------------------------------------- */
-
-header {
-    position: relative;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('img/hero.jpg');
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-}
-
-.hero-text-box {
-    position: absolute;
-    width: 1140px;
-    /* width: 60%; */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-nav {
-    padding: 0.3% 2%;
-}
-
-.logo {
-    height: 100px;
-    float: left;
-    margin: 20px 0 0;
-}
-
-.logo-black {
-    height: 50px;
-    float: left;
-    margin: 5px 0;
-    display: none;
-}
-
-/* MAIN NAVIGATION */
-
-.main-nav {
-    margin-top: 55px;
-    /* margin-bottom: 47px; */
-    float: right;
-    list-style-type: none;
-}
-
-.main-nav li {
-    display: inline-block;
-    margin-left: 40px;
-}
-
-.main-nav li a:link,
-.main-nav li a:visited {
-    padding: 10px 0;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 90%;
-    border-bottom: 2px solid transparent;
-    transition: border-bottom 0.2s;
-}
-
-.main-nav li a:hover,
-.main-nav li a:active {
-    border-bottom: 2px solid #e67e22;
-}
-
-/* MOBILE NAVIGATION */
-
-.mobile-nav-icon{
-    float: right;
-    margin-top: 30px;
-    cursor: pointer;
-    display: none;
-}
-
-.mobile-nav-icon ion-icon{
-    font-size: 200%;
-    color: #fff;
-}
-
-/* STICKY NAVIGATION */
-
-.sticky {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.98);
-    box-shadow: 0 1px 1px #cac8c8;
-    z-index: 999999;
-}
-
-.sticky .main-nav {
-    margin-top: 18px;
-}
-
-.sticky .main-nav li a:link,
-.sticky .main-nav li a:visited {
-    padding: 16px 0;
-    color: #555;
-}
-
-.sticky .logo {
-    display: none;
-}
-
-.sticky .logo-black {
-    display: block;
-}
-
-
-
-
-/* --------------------------------------------------- */
-/* FEATURES */
-/* --------------------------------------------------- */
-
-.section-features .long-copy {
-    margin-bottom: 35px;
-}
-
-/* --------------------------------------------------- */
-/* MEALS */
-/* --------------------------------------------------- */
-
-.section-meals {
-    padding: 0;
-}
-
-.meals-showcase {
-    list-style-type: none;
-    width: 100%;
-}
-
-.meals-showcase li {
-    display: block;
-    float: left;
-    width: 25%;
-}
-
-.meal-photo {
-    width: 100%;
-    margin: 0;
-    overflow: hidden;
-    background-color: #000;
-}
-
-.meal-photo img {
-    opacity: 0.6;
-    width: 100%;
-    transform: scale(1.25);
-    transition: transform 0.86s, opacity 0.86s;
-}
-
-.meal-photo img:hover {
-    transform: scale(1.03);
-    opacity: 1;
-}
-
-/* --------------------------------------------------- */
-/* HOW IT WORKS */
-/* --------------------------------------------------- */
-
-.section-steps {
-    background-color: #f4f4f4;
-}
-
-.steps-box:first-child {
-    text-align: right;
-    padding-right: 3%;
-    margin-top: 30px;
-}
-
-.steps-box:last-child {
-    padding-left: 3%;
-    margin-top: 70px;
-}
-
-.app-screen {
-    width: 40%;
-}
-
-.works-step {
-    margin-bottom: 50px;
-}
-
-.works-step:last-of-type {
-    margin-bottom: 80px;
-}
-
-.works-step p {
-    padding-top: 6px;
-}
-
-.works-step div {
-    color: #e67e22;
-    border: 2px solid #e67e22;
-    border-radius: 50%;
-    height: 55px;
-    width: 55px;
-    text-align: center;
-    padding: 7px;
-    float: left;
-    font-size: 150%;
-    margin-right: 25px;
-}
-
-.btn-app:link,
-.btn-app:visited {
-    text-decoration: none;
-    border: 0;
-}
-
-.btn-app img {
-    height: 50px;
-    margin-right: 10px;
-}
-
-/* --------------------------------------------------- */
-/* CITIES */
-/* --------------------------------------------------- */
-
-.box img {
-    width: 100%;
-    margin-bottom: 15px;
-}
-
-.city-feature {
-    margin-bottom: 6px;
-}
-
-/* --------------------------------------------------- */
-/* TESTIMONIALS */
-/* --------------------------------------------------- */
-
-.section-testimonials {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url('img/back-customers.jpg');
-    background-size: cover;
-    color: #fff;
-    background-attachment: fixed;
-    background-position: center;
-}
-
-blockquote {
-    padding: 2%;
-    font-style: italic;
-    line-height: 1.45;
-    position: relative;
-    margin-top: 40px;
-}
-
-blockquote::before {
-    content: '\201C';
-    font-size: 500%;
-    display: block;
-    position: absolute;
-    top: -58px;
-    left: -5px;
-}
-
-cite {
-    display: block;
-    font-size: 90%;
-    margin-top: 25px;
-}
-
-cite img {
-    height: 45px;
-    border-radius: 50%;
-    margin-right: 10px;
-    vertical-align: middle;
-}
-
-/* --------------------------------------------------- */
-/* SIGN UP */
-/* --------------------------------------------------- */
-
-.section-plans {
-    background-color: #f4f4f4;
-}
-
-.plan-box {
-    background-color: #fff;
-    border-radius: 7px;
-    width: 90%;
-    margin-left: 5%;
-    box-shadow: 0 2px 2px rgb(233, 231, 231, 0.4);
-}
-
-.plan-box div {
-    padding: 15px;
-    border-bottom: 1px solid rgba(214, 214, 214, 0.578);
-}
-
-.plan-box div:first-child {
-    background-color: #fcfcfc;
-    border-top-right-radius: 7px;
-    border-top-left-radius: 7px;
-}
-
-.plan-box div:last-child {
-    text-align: center;
-    border: 0;
-}
-
-.plan-price {
-    font-size: 300%;
-    margin-bottom: 10px;
-    font-weight: 200;
-    color: #e67e22;
-}
-
-.plan-price span {
-    font-size: 30%;
-    font-weight: 300;
-}
-
-.plan-price-meal {
-    font-size: 80%;
-}
-
-.plan-box ul {
-    list-style: none;
-}
-
-.plan-box ul li {
-    padding: 5px 0;
-}
-
-/* --------------------------------------------------- */
-/* CONTACT FORM */
-/* --------------------------------------------------- */
-
-.contact-form {
-    width: 60%;
-    margin: 0 auto;
-}
-
-input[type=text],
-input[type=email],
-select,
-textarea {
-    width: 100%;
-    padding: 7px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-/* input[type=text]:focus,
-input[type=email]:focus,
-select:focus,
-textarea:focus {
-    box-shadow: 0.1px 0.1px 2.4px 0.9px #e67e22;
-outline: #e67e22 auto 2px;
-}
-
-*/
-input[type=checkbox] {
-    margin: 10px 5px 10px 0;
-}
-
-*:focus {
-    outline: none;
-}
-
-/* --------------------------------------------------- */
-/* FOOTER */
-/* --------------------------------------------------- */
-
-footer {
-    background-color: #333;
-    padding: 60px 50px;
-    font-size: 80%;
-}
-
-.footer-nav {
-    list-style: none;
-    float: left;
-}
-
-.social-links {
-    list-style: none;
-    float: right;
-}
-
-.footer-nav li,
-.social-links li {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-.footer-nav li:last-child,
-.social-links li:last-child {
-    margin-right: 0;
-}
-
-.footer-nav li a:link,
-.footer-nav li a:visited,
-.social-links li a:link,
-.social-links li a:visited {
-    text-decoration: none;
-    border: 0;
-    color: #888;
-    transition: color 0.2s;
-}
-
-.footer-nav li a:hover,
-.footer-nav li a:active {
-    color: #ddd;
-}
-
-.social-links li a:link,
-.social-links li a:visited {
-    font-size: 160%;
-}
-
-.facebook,
-.twitter,
-.instagram,
-.linkedin {
-    transition: color 0.2s;
-}
-
-.facebook:hover,
-.facebook:active {
-    color: #4267B2;
-}
-
-.twitter:hover,
-.twitter:active {
-    color: #00acee;
-}
-
-.instagram:hover,
-.instagram:active {
-    color: #a33bc2;
-}
-
-.linkedin:hover,
-.linkedin:active {
-    color: #007bb5;
-}
-
-footer p {
-    color: #888;
-    text-align: center;
-    margin-top: 20px;
-}
-
-::-moz-placeholder {
-    font-weight: 300;
-}
-
-:-ms-input-placeholder {
-    font-weight: 300;
-}
-
-::placeholder,
-option,
-select {
-    font-weight: 300;
-}
-
-/* --------------------------------------------------- */
-/* Animations */
-/* --------------------------------------------------- */
-
-.js--wp-1,
-.js--wp-2,
-.js--wp-3 {
-    opacity: 0;
-    animation-duration: 0.7s;
-}
-
-.js--wp-5{
-    opacity: 0;
-    animation-duration: 0.4s;
-}
-
-.js--wp-4 {
-    animation-duration: 0.4s;
-}
-
-.js--wp-1.animate__animated,
-.js--wp-2.animate__animated,
-.js--wp-3.animate__animated,
-.js--wp-5.animate__animated {
-    opacity: 1;
-}
+*{margin:0;padding:0;box-sizing:border-box}body,html{background-color:#fff;color:#555;font-family:Lato,Arial,sans-serif;font-size:20px;font-weight:300;text-rendering:optimizeLegibility;overflow-x:hidden}.clearfix{zoom:1}.clearfix::after{content:'.';clear:both;display:block;height:0;visibility:hidden}.row{max-width:1140px;margin:0 auto}section{padding:80px 0}.box{padding:1.3%}h1,h2,h3{font-weight:300;text-transform:uppercase;letter-spacing:1px;line-height:1.2}h1{margin:0 0 20px 0;color:#fff;font-size:200%;word-spacing:4px}h2{font-size:180%;word-spacing:2px;text-align:center;margin-bottom:30px}h3{font-size:110%;margin-bottom:15px}h2::after{display:block;height:2px;background-color:#e67e22;content:' ';width:100px;margin:20px auto 0}.long-copy{line-height:1.45;width:70%;margin:0 15%}.box p{letter-spacing:1px;font-size:80%;line-height:1.45}.icon-big{font-size:350%;display:block;color:#e67e22;margin-bottom:15px}.icon-small{display:inline-block;width:30px;text-align:center;color:#e67e22;font-size:120%;margin-right:10px;line-height:1.2;vertical-align:middle;margin-top:-5px}a:link,a:visited{color:#e67e22;text-decoration:none;padding-bottom:1px;border-bottom:1px solid #e67e22;transition:border-bottom .2s,color .2s}a:active,a:hover{color:#555;border-bottom:1px solid transparent}.btn:link,.btn:visited,input[type=submit]{display:inline-block;padding:10px 30px;font-weight:300;text-decoration:none;border-radius:200px;transition:background-color .2s,border .2s,color .2s}.btn-full:link,.btn-full:visited,input[type=submit]{background-color:#e67e22;color:#fff;border:1px solid #e67e22;margin-right:15px}.btn-ghost:link,.btn-ghost:visited{border:1px solid #e67e22;color:#e67e22}.btn:active,.btn:hover,input[type=submit]:active,input[type=submit]:hover{background-color:#cf6d17}.btn-full:active,.btn-full:hover,input[type=submit]{border:1px solid #cf6d17}.btn-ghost:active,.btn-ghost:hover{border:1px solid #cf6d17;color:#fff}header{position:relative;background-image:linear-gradient(rgba(0,0,0,.7),rgba(0,0,0,.7)),url(img/hero-min.jpg);height:100vh;background-size:cover;background-position:center;background-attachment:fixed}.hero-text-box{position:absolute;width:1140px;top:50%;left:50%;transform:translate(-50%,-50%)}nav{padding:.3% 2%}.logo{height:100px;float:left;margin:20px 0 0}.logo-black{height:50px;float:left;margin:5px 0;display:none}.main-nav{margin-top:55px;float:right;list-style-type:none}.main-nav li{display:inline-block;margin-left:40px}.main-nav li a:link,.main-nav li a:visited{padding:10px 0;color:#fff;text-decoration:none;text-transform:uppercase;font-size:90%;border-bottom:2px solid transparent;transition:border-bottom .2s}.main-nav li a:active,.main-nav li a:hover{border-bottom:2px solid #e67e22}.mobile-nav-icon{float:right;margin-top:30px;cursor:pointer;display:none}.mobile-nav-icon ion-icon{font-size:200%;color:#fff}.sticky{position:fixed;top:0;left:0;width:100%;background-color:rgba(255,255,255,.98);box-shadow:0 1px 1px #cac8c8;z-index:999999}.sticky .main-nav{margin-top:18px}.sticky .main-nav li a:link,.sticky .main-nav li a:visited{padding:16px 0;color:#555}.sticky .logo{display:none}.sticky .logo-black{display:block}.section-features .long-copy{margin-bottom:35px}.section-meals{padding:0}.meals-showcase{list-style-type:none;width:100%}.meals-showcase li{display:block;float:left;width:25%}.meal-photo{width:100%;margin:0;overflow:hidden;background-color:#000}.meal-photo img{opacity:.6;width:100%;transform:scale(1.25);transition:transform .86s,opacity .86s}.meal-photo img:hover{transform:scale(1.03);opacity:1}.section-steps{background-color:#f4f4f4}.steps-box:first-child{text-align:right;padding-right:3%;margin-top:30px}.steps-box:last-child{padding-left:3%;margin-top:70px}.app-screen{width:40%}.works-step{margin-bottom:50px}.works-step:last-of-type{margin-bottom:80px}.works-step p{padding-top:6px}.works-step div{color:#e67e22;border:2px solid #e67e22;border-radius:50%;height:55px;width:55px;text-align:center;padding:7px;float:left;font-size:150%;margin-right:25px}.btn-app:link,.btn-app:visited{text-decoration:none;border:0}.btn-app img{height:50px;margin-right:10px}.box img{width:100%;margin-bottom:15px}.city-feature{margin-bottom:6px}.section-testimonials{background-image:linear-gradient(rgba(0,0,0,.75),rgba(0,0,0,.75)),url(img/back-customers-min.jpg);background-size:cover;color:#fff;background-attachment:fixed;background-position:center}blockquote{padding:2%;font-style:italic;line-height:1.45;position:relative;margin-top:40px}blockquote::before{content:'\201C';font-size:500%;display:block;position:absolute;top:-58px;left:-5px}cite{display:block;font-size:90%;margin-top:25px}cite img{height:45px;border-radius:50%;margin-right:10px;vertical-align:middle}.section-plans{background-color:#f4f4f4}.plan-box{background-color:#fff;border-radius:7px;width:90%;margin-left:5%;box-shadow:0 2px 2px rgb(233,231,231,.4)}.plan-box div{padding:15px;border-bottom:1px solid rgba(214,214,214,.578)}.plan-box div:first-child{background-color:#fcfcfc;border-top-right-radius:7px;border-top-left-radius:7px}.plan-box div:last-child{text-align:center;border:0}.plan-price{font-size:300%;margin-bottom:10px;font-weight:200;color:#e67e22}.plan-price span{font-size:30%;font-weight:300}.plan-price-meal{font-size:80%}.plan-box ul{list-style:none}.plan-box ul li{padding:5px 0}.contact-form{width:60%;margin:0 auto}input[type=email],input[type=text],select,textarea{width:100%;padding:7px;border-radius:4px;border:1px solid #ccc}input[type=checkbox]{margin:10px 5px 10px 0}:focus{outline:0}footer{background-color:#333;padding:60px 50px;font-size:80%}.footer-nav{list-style:none;float:left}.social-links{list-style:none;float:right}.footer-nav li,.social-links li{display:inline-block;margin-right:20px}.footer-nav li:last-child,.social-links li:last-child{margin-right:0}.footer-nav li a:link,.footer-nav li a:visited,.social-links li a:link,.social-links li a:visited{text-decoration:none;border:0;color:#888;transition:color .2s}.footer-nav li a:active,.footer-nav li a:hover{color:#ddd}.social-links li a:link,.social-links li a:visited{font-size:160%}.facebook,.instagram,.linkedin,.twitter{transition:color .2s}.facebook:active,.facebook:hover{color:#4267b2}.twitter:active,.twitter:hover{color:#00acee}.instagram:active,.instagram:hover{color:#a33bc2}.linkedin:active,.linkedin:hover{color:#007bb5}footer p{color:#888;text-align:center;margin-top:20px}::-moz-placeholder{font-weight:300}:-ms-input-placeholder{font-weight:300}::placeholder,option,select{font-weight:300}.js--wp-1,.js--wp-2,.js--wp-3{opacity:0;animation-duration:.7s}.js--wp-5{opacity:0;animation-duration:.4s}.js--wp-4{animation-duration:.4s}.js--wp-1.animate__animated,.js--wp-2.animate__animated,.js--wp-3.animate__animated,.js--wp-5.animate__animated{opacity:1}
